# MVP

./: .gitignore  Dockerfile  pyproject.toml
config/: settings.toml
src/: config_loader.py  main.py  metrics.py
